# headhunter_bot

./: .gitignore  README.md  agency_backup.dump  debug_firecrawl.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  run_autobot.py  run_full_flow.py  run_system_check.py  test_report.py  update_db_imap.py  update_db_schema.py
app/: backup_manager.py  database.py  memory_utils.py  scheduler.py  schemas.py  tools.py  warmup.py
app/agents/: inbox.py  reporter.py  researcher.py  scout.py  sender.py  strategy.py  writer.py
files/: campaign_3_history.json  campaign_5_history.json  campaign_6_history.json
gui/: dashboard.py
